# Docker-Exam

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  docker-build-push.yml
app/: main.py
