[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "3.1.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
